# demo

./: README.md  game.py  pyproject.toml
files/: coins.py
tests/: test_coins.py
