[tool.poetry]
name = "demo"
version = "0.1.0"
description = "This is our class demo"
authors = ["Kody Carling <kodycarling19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
